@@ -5,7 +5,7 @@ import lombok.*;
 import lombok.extern.slf4j.Slf4j;
 import org.jetbrains.annotations.NotNull;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 @Slf4j
 @Data
@@ -117,11 +117,11 @@ public class AniConfiguration {
     @Builder.Default private int cacheTTLInDays = 30;
 
     public String getEpisodePath(String relativePath) {
-        return Paths.get(tvShowFolder, relativePath).toString();
+        return Path.of(tvShowFolder, relativePath).toString();
     }
 
     public String getMoviePath(String relativePath) {
-        return Paths.get(movieFolder, relativePath).toString();
+        return Path.of(movieFolder, relativePath).toString();
     }
 
     @Getter
