@@ -1,5 +1,8 @@
 package processing;
 
+import config.blocks.MoveConfig;
+import config.blocks.RenameConfig;
+import config.blocks.TagsConfig;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
@@ -11,7 +14,6 @@ import processing.tagsystem.TagSystemTags;
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Optional;
@@ -21,9 +23,11 @@ import java.util.Optional;
 public class FileRenamer {
 
     private final IFileHandler fileHandler;
+    private final TagsConfig tagsConfig;
 
     public boolean renameFile(FileInfo procFile) {
-        val configuration = procFile.getConfiguration();
+        val moveConfig = procFile.config().move();
+        val renameConfig = procFile.config().rename();
         try {
 
             val targetFolder = getTargetFolder(procFile);
@@ -46,16 +50,17 @@ public class FileRenamer {
 
             if (Files.exists(targetFilePath)) {
                 log.info(STR."Destination for File \{procFile.getFile().getAbsolutePath()} with Id \{procFile.getId()} already exists: \{targetFilePath.toString()}");
-                if (configuration.isEnableFileMove()) {
+                if (moveConfig.mode() != MoveConfig.Mode.NONE) {
+                    val duplicateConfig = moveConfig.duplicates();
                     // Only handle duplicates if moving is enabled, else we want to rename in place so duplicate means it's name is correct
-                    if (configuration.isDeleteDuplicateFiles()) {
+                    if (duplicateConfig.mode() == MoveConfig.HandlingConfig.Mode.DELETE) {
                         fileHandler.deleteFile(procFile.getFile().toPath());
-                    } else if (configuration.isMoveDuplicateFiles()) {
+                    } else if (duplicateConfig.mode() == MoveConfig.HandlingConfig.Mode.MOVE) {
                         val oldFilename = procFile.getFile().getName();
                         val subFolderWithFile = targetFilePath.subpath(targetFilePath.getNameCount() - 2, targetFilePath.getNameCount());
-                        val targetPath = Paths.get(configuration.getDuplicatesFolder()).resolve(subFolderWithFile);
+                        val targetPath = duplicateConfig.folder().resolve(subFolderWithFile);
                         fileHandler.renameFile(procFile.getFile().toPath(), targetPath);
-                        if (configuration.isRenameRelatedFiles()) {
+                        if (renameConfig.related()) {
                             renameRelatedFiles(procFile, oldFilename, targetPath.getFileName().toString(), targetPath.getParent());
                         }
                     }
@@ -70,7 +75,7 @@ public class FileRenamer {
             val oldFilename = procFile.getFile().getName();
             if (fileHandler.renameFile(procFile.getFile().toPath(), targetFilePath)) {
                 log.debug(STR."File \{procFile.getFile().getAbsolutePath()} with Id \{procFile.getId()} renamed to \{targetFilePath.toString()}");
-                if (configuration.isRenameRelatedFiles()) {
+                if (renameConfig.related()) {
                     renameRelatedFiles(procFile, oldFilename, targetFilePath.getFileName().toString(), targetFolderPath);
                 }
 
@@ -108,12 +113,12 @@ public class FileRenamer {
         }
     }
 
-    private static Optional<String> getTargetFileName(FileInfo procFile, TagSystemResult tagSystemResult) throws Exception {
-        val configuration = procFile.getConfiguration();
-        if (!configuration.isEnableFileRenaming()) {
+    private Optional<String> getTargetFileName(FileInfo procFile, TagSystemResult tagSystemResult) throws Exception {
+        val renameConfig = procFile.config().rename();
+        if (renameConfig.mode() == RenameConfig.Mode.NONE) {
             return Optional.of(procFile.getFile().getName());
         }
-        if (configuration.isRenameTypeAniDBFileName()) {
+        if (renameConfig.mode() == RenameConfig.Mode.ANIDB) {
             return Optional.of(procFile.getData().get(TagSystemTags.FileAnidbFilename));
         }
         var tsResult = tagSystemResult == null ? getPathFromTagSystem(procFile) : tagSystemResult;
@@ -125,15 +130,15 @@ public class FileRenamer {
         return Optional.of(tsResult.FileName());
     }
 
-    private static Pair<Path, TagSystemResult> getTargetFolder(FileInfo procFile) throws Exception {
-        val configuration = procFile.getConfiguration();
-        if (!configuration.isEnableFileMove()) {
+    private Pair<Path, TagSystemResult> getTargetFolder(FileInfo procFile) throws Exception {
+        val moveConfig = procFile.config().move();
+        if (moveConfig.mode() == MoveConfig.Mode.NONE) {
             return Pair.of(procFile.getFile().getParentFile().toPath(), null);
         }
 
-        if (configuration.isMoveTypeUseFolder()) {
-            val moveToFolder = configuration.getMoveToFolder();
-            return Pair.of(moveToFolder.isEmpty() ? procFile.getFile().getParentFile().toPath() : Paths.get(moveToFolder), null);
+        if (moveConfig.mode() == MoveConfig.Mode.FOLDER) {
+            val moveToFolder = moveConfig.folder();
+            return Pair.of(moveToFolder == null || moveToFolder.toString().isBlank() ? procFile.getFile().getParentFile().toPath() : moveToFolder, null);
         }
 
         val tagSystemResult = getPathFromTagSystem(procFile);
@@ -151,7 +156,7 @@ public class FileRenamer {
             throw new Exception("Pathname too long. Check your tag system code or your base folders.");
         }
 
-        val targetFolder = Paths.get(pathName);
+        val targetFolder = Path.of(pathName);
         if (!targetFolder.isAbsolute()) {
             log.warn(STR."Folderpath for moving from TagSystem needs to be absolute but is \{targetFolder.toString()}");
             return Pair.of(null, tagSystemResult);
@@ -160,18 +165,15 @@ public class FileRenamer {
         return Pair.of(targetFolder, tagSystemResult);
     }
 
-    private static TagSystemResult getPathFromTagSystem(FileInfo procFile) throws Exception {
+    private TagSystemResult getPathFromTagSystem(FileInfo procFile) throws Exception {
         val tags = new HashMap<>(procFile.getData());
-        val configuration = procFile.getConfiguration();
-        tags.put(TagSystemTags.BaseTvShowPath, configuration.getTvShowFolder());
-        tags.put(TagSystemTags.BaseMoviePath, configuration.getMovieFolder());
         tags.put(TagSystemTags.FileCurrentFilename, procFile.getFile().getName());
 
-        String codeStr = configuration.getTagSystemCode();
+        String codeStr = tagsConfig.tagSystem();
         if (codeStr == null || codeStr.isEmpty()) {
             return null;
         }
 
-        return TagSystem.Evaluate(codeStr, tags);
+        return TagSystem.Evaluate(codeStr, tags, tagsConfig.paths());
     }
 }
